fixed loot overflow added retro filter to loot buttons

--- a/src/Style/main.sass
+++ b/src/Style/main.sass
@@ -66,7 +66,8 @@ main
         opacity: 0
     .loot-list
         display: flex
-        overflow-x: scroll
+        flex-wrap: wrap
+        justify-content: center
         gap: palette.$spacing-small
         padding-bottom: palette.$spacing-small
     .loot-button
